Changed the OAuth code to use signpost. Edited that code to include body hashes.

--- a/app/views/problemSets/hooks.scala.html
+++ b/app/views/problemSets/hooks.scala.html
@@ -90,7 +90,7 @@
                     <option value="application/json">JSON</option>
                     <option value="application/xml">XML</option>
                     <option value="text/plain">Text</option>
-                    <!--<option value="application/x-www-form-urlencoded">URL Encoded String</option>-->
+                    <option value="application/x-www-form-urlencoded">URL Encoded String</option>
                 </select>
             </div>
         </div>
