Made changes to the UI. Added floating problems and the multi grading modifier.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,7 +14,7 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/bootstrap.min.js")" type="text/javascript"></script>
     </head>
-    <body>
+    <body class="dark">
         <div class="container">
             @if(request.flash.get("error").isDefined) {
                 <div class="alert alert-error">
