--- a/app/views/problemSets/dashboard.scala.html
+++ b/app/views/problemSets/dashboard.scala.html
@@ -44,4 +44,42 @@
             </div>
         </div>
     </form>
+
+    <h2>Floating Problems</h2>
+    @if(user.floatingProblems.isEmpty) {
+        <em>You have no floating problems</em>
+    } else {
+        <table class="table table-bordered">
+            <tr>
+                <th>Name</th>
+                <th>ID</th>
+                <th>Actions</th>
+            </tr>
+            @for(problem <- user.floatingProblems) {
+                <tr>
+                    <td>@problem.name</td>
+                    <td>@problem.id.get</td>
+                    <td>
+                        <a href="@routes.FloatingProblems.edit(problem.id.get)" class="btn">View/Edit</a>
+                        <a href="@routes.FloatingProblems.delete(problem.id.get)" class="btn">Delete</a>
+                    </td>
+                </tr>
+            }
+        </table>
+    }
+
+    <h3>Create a Floating Problem</h3>
+    <form action="@routes.FloatingProblems.create()" method="@routes.FloatingProblems.create().method" class="form-horizontal">
+        <div class="control-group">
+            <label class="control-label" for="fpName">Name</label>
+            <div class="controls">
+                <input type="text" id="fpName" name="name" placeholder="Name">
+            </div>
+        </div>
+        <div class="control-group">
+            <div class="controls">
+                <button type="submit" class="btn btn-success">Create</button>
+            </div>
+        </div>
+    </form>
 }
